--- a/Project.ipynb
+++ b/Project.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fundamentals of Data Analysis Tasks \n",
+    "# Fundamentals of Data Analysis Project\n",
     "\n",
     "## Rebecca Feeley\n",
     "\n",
