--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "### Task 1 \n",
-    "> To verify, using Python, that the Collatz conjecture is true for the first 10,000 positive integeres.\n",
+    "> To verify, using Python, that the Collatz conjecture is true for the first 10,000 positive integers.\n",
     "\n",
     "The Collatz Conjecture is a mathematical problem which has not been definitively solved as of yet. The Collatz Conjecture is based on the below equation:  \n",
     "\n",
@@ -310,6 +310,50 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The end of Task 3\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 4\n",
+    "\n",
+    "> Suppose you are flipping two coins, each with a probability p of giving heads. Plot the entropy of the total number of heads versus p.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation*}\n",
+    "H(x) =\n",
+    "\\begin{cases}\n",
+    "-\\sum_{i=1}^{n} P(x_i) \\log_2 P(x_i).\n",
+    "\\end{cases}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
