--- a/task3.ipynb
+++ b/task3.ipynb
@@ -143,7 +143,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "The appropriate distribution type can be separated based on categorical variables vs numerical variables\n",
+    "\n",
+    "First look at categorical variables\n",
+    "\n",
+    "Then categorical"
+   ]
   },
   {
    "cell_type": "code",
