updating code for task 4 & content

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -340,6 +340,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### What is Entropy\n",
+    "The concept of entropy as it applies to information was first introduced by the famous computer scientist and mathemetician, Claude Shannon in his 1948 paper, \"A Mathematical Theory of Communication\".\n",
+    "Essentially, entropy can be considered a measure of uncertainty. For a random variable, it is considered the degree of uncertainty as to the possible outcomes of the variable.\n",
+    "\n",
+    "Information entropy as expressed by Claude Shannon can be demonstrated in the following equation:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\\begin{equation*}\n",
     "H(x) =\n",
     "\\begin{cases}\n",
@@ -349,11 +360,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entropy & Coin Toss\n",
+    "As we have established above, entropy can be considered a measure of uncertainty. \n",
+    "\n",
+    "When looking at one fair coin toss, the probability of the outcome being heads is as follows:\n",
+    "Probability = (Number of desired results) / (Number of possible Results) so P = 1/2 for heads.\n",
+    "As the number of desired results is 1 (heads), divided by the number of possible results (which is 2; heads or tails), \n",
+    "the probability of getting heads in a single fair coin toss is 1/2, or 0.5 (H or T is possible)\n",
+    "In this instance, the entropy of the single coin toss is one bit. Any subsequent coin tosses do not deliver any information which impacts the probability of further coin tosses as they are independent events, and getting either outcome remains equally likely.\n",
+    "\n",
+    "However, this is different when flipping two fair coins as there are 4 possible outcomes and for each specific outcome there is one desired result (1/4):\n",
+    "HH (Heads Heads) -> Probability is 0.25\n",
+    "TT (Tails Tails) -> Probability is 0.25\n",
+    "HT (Heads Tails) -> Probability is 0.25\n",
+    "TH (Tails Heads) -> Probability is 0.25\n",
+    "\n",
+    "As the task above specifies the chance of getting heads, the number of desired outcomes is 3 (HH, HT and TH) as they all have at least one heads outcome. There are 4 possible outcomes. So, the probability of getting at least one head is 3/4 or 0.75 when flipping two coins. (i.e 0.25 + 0.25 + 0.25 = 0.75)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np # importing the necessary library\n",
+    "\n",
+    "def H(p): # defining a function for entropy using numpy\n",
+    "    return -(1-p) * np.log2(1.0-p) - p * np.log2(p) # version in numpy of above formula for entropy\n"
+   ]
   },
   {
    "cell_type": "code",
