--- a/task4.ipynb
+++ b/task4.ipynb
@@ -1,22 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\begin{equation*}\n",
-    "H(x) =\n",
-    "\\begin{cases}\n",
-    "-\\sum_{i=1}^{n} P(x_i) \\log_2 P(x_i).\n",
-    "\\end{cases}\n",
-    "\\end{equation*}\n"
+    "import numpy as np # importing the necessary library\n",
+    "\n",
+    "def H(p): # defining a function for entropy using numpy\n",
+    "    return -(1-p) * np.log2(1.0-p) - p * np.log2(p) # version in numpy of above formula for entropy\n"
    ]
   },
   {
@@ -24,12 +17,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def H(p):\n",
-    "    return -(1-p) * np.log2(1.0-p) - p * np.log2(p) # version in numpy of above forumla"
-   ]
+   "source": []
   }
  ],
  "metadata": {
