--- a/task3.ipynb
+++ b/task3.ipynb
@@ -6,13 +6,8 @@
    "source": [
     "## Task 3\n",
     "\n",
-    "> For each of the variables in the penguins data set, suggest what probability distribution from the mumpy random distributions list is the most appropriate to model the variable. "
+    "> For each of the variables in the penguins data set, suggest what probability distribution from the nimpy random distributions list is the most appropriate to model the variable. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -25,38 +20,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explain each of the different probability distributions in Python\n",
-    "\n",
-    "# Histograms etc of each of the variables\n",
-    "\n",
-    "# Check the distribution\n",
-    "\n",
-    "# Say which one is most appropriate and explain why\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
+    "The appropriate distribution type can be separated based on whether they are categorical variables vs numerical variables.\n",
+    "Firstly, I will look at the categorical variables.\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The qualitative variables Species, Island and Sex are discrete, distinct variables. As such, the appropriate numpy probability distribution would be a customised categorical distribution i.e numpy.random.choice. \n",
+    "In order to the demonstrate the probability distribution of categorical variables, it is necessary to specify the probability of each category. This can be obtained using the value counts function as I have demonstrated below for the Species variable.\n",
+    "Such categorical variables are best visualised using bar charts or pie charts."
+   ]
   },
   {
    "cell_type": "code",
@@ -66,7 +42,7 @@
    "source": [
     "# importing all of the relevant libraries to analyse the data set \n",
     "import numpy as np\n",
-    "import seaborn as sea\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt \n",
     "import pandas as pd \n",
     "\n",
@@ -74,7 +50,7 @@
     "Penguins.describe(include = 'all') # I specified to include all as the describe function defaults to only show numerical data while \n",
     "# I wanted to include both numerical & categorical data.\n",
     "\n",
-    "# I have downloaded the csv data file to the directory. It can also be gotten online at https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv\n"
+    "# I have downloaded the csv data file to the directory. It can also be gotten online at https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv"
    ]
   },
   {
@@ -101,8 +77,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Penguins.info()"
+    "# Species is a categorical variable \n",
+    "plt.figure(figsize=(10, 7)) # setting the size of the figure\n",
+    "sns.countplot(x= 'species', data = Penguins) \n",
+    "plt.title('Frequency of Penguins Species')\n",
+    "plt.xlabel('Species')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "prob_species = Penguins['species'].value_counts(normalize=True) # getting the probability of each \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# ISLAND (WHICH IS CATEGORICAL)\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.countplot(x='island', data = Penguins)\n",
+    "plt.title('Count of Penguins on Each Island')\n",
+    "plt.xlabel('Island')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n",
+    "\n",
+    "# SEX (WHICH IS CATEGORICAL)\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.countplot(x='sex', data= Penguins)\n",
+    "plt.title('Count of Penguins by Sex')\n",
+    "plt.xlabel('Sex')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -123,10 +147,7 @@
     "plt.subplots_adjust(top=0.9, hspace=0.4) #adjusting the space between graphs so the titles do not overlap with each other\n",
     "plt.show() \n",
     "#plt.savefig('Histograms')\n",
-    "#plt.close()\n",
-    "\n",
-    "\n",
-    "NEED TO ADD TITLES ETC"
+    "#plt.close()\n"
    ]
   },
   {
@@ -135,7 +156,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Penguins.plot()"
+    "############################################\n",
+    "# Numeric Variables\n",
+    "numeric_variables = ['bill_length_mm', 'bill_depth_mm', 'flipper_length_mm', 'body_mass_g']\n",
+    "\n",
+    "for variable in numeric_variables:\n",
+    "    plt.figure(figsize=(10, 9))\n",
+    "    sns.histplot(Penguins[variable], kde=True)\n",
+    "    plt.title(f'Distribution of {variable}')\n",
+    "    plt.xlabel(variable)\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -143,13 +174,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "The appropriate distribution type can be separated based on categorical variables vs numerical variables\n",
-    "\n",
-    "First look at categorical variables\n",
-    "\n",
-    "Then categorical"
-   ]
+   "source": []
   }
  ],
  "metadata": {
