updating task 3 code

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -292,10 +292,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References\n",
-    "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.describe.html\n",
-    "\n",
-    "\n"
+    "The appropriate distribution type can be separated based on whether they are categorical variables vs numerical variables.\n",
+    "Firstly, I will look at the categorical variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The qualitative variables Species, Island and Sex are discrete, distinct variables. Such variables are not continuous in nature and are not numerical. As such, they do not fit the numpy distributions which apply to continous data such as normal distribution, gamma distribution etc. Therefore, the appropriate numpy probability distribution would be a customised categorical distribution i.e numpy.random.choice. \n",
+    "This function generates a random sample from a given 1-D array and requires us to specify the porbability of each category variable.\n",
+    "This can be obtained using the value counts function as I have demonstrated below.\n",
+    "Such categorical variables are best visualised using bar charts or pie charts."
    ]
   },
   {
@@ -309,6 +317,118 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing all of the relevant libraries to analyse the data set \n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt \n",
+    "import pandas as pd \n",
+    "\n",
+    "Penguins = pd.read_csv('penguins.csv') # reading the penguins data set to use (should already be done)\n",
+    "Penguins.describe(include = 'all') # I specified to include all as the describe function defaults to only show numerical data while \n",
+    "# I wanted to include both numerical & categorical data.\n",
+    "\n",
+    "# I have downloaded the csv data file to the directory. It can also be gotten online at https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Species is a categorical variable \n",
+    "plt.figure(figsize = (10, 7))\n",
+    "sns.countplot (x = 'species', data = Penguins)\n",
+    "plt.title ('Frequency of Penguin Species')\n",
+    "plt.xlabel ('Species')\n",
+    "plt.ylabel ('Count')\n",
+    "plt.show()\n",
+    "\n",
+    "prob_species = Penguins['species'].value_counts(normalize=True) # getting the probability of each penguin species\n",
+    "\n",
+    "Species = ['Adelie', 'Gentoo', 'Chinstrap']\n",
+    "species_probabilities = [0.442, 0.360, 0.198] # probabilities for each species as set out by above prob_species value counts function\n",
+    "\n",
+    "fig = plt.figure(figsize =(10, 7)) #setting the size of the figure\n",
+    "plt.pie(species_probabilities, labels = Species, autopct='%1.1f%%') # double percentage sign is required to show % sign\n",
+    "# using auto percentage function\n",
+    "plt.legend(title = \"Species\") # setting legend\n",
+    "plt.title('Penguin Species Distribution') # setting title\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above resulting probabilities can then be used in the numpy.random.choice function, where the probability of each variable is specified e.g Adelie is 0.4418. The probabilties must add up to 1 for this function to work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Island is a categorical variable\n",
+    "colors = ['red', 'yellow', 'indigo'] # defining a list of colors\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.countplot(x='island', data = Penguins, palette = colors) # using palette function to set colors of count plot\n",
+    "plt.title('Count of Penguins on Each Island')\n",
+    "plt.xlabel('Island')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n",
+    "\n",
+    "prob_island = Penguins['island'].value_counts(normalize=True) # getting the probability of each island\n",
+    "\n",
+    "\n",
+    "Islands = ['Torgersen', 'Biscoe', 'Dream']\n",
+    "islands_probabilities = [0.15, 0.49, 0.36] # probabilities for each island as set out by above prob_island value counts function\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(figsize =(10, 7)) #setting the size of the figure\n",
+    "plt.pie(islands_probabilities, labels = Islands, autopct='%1.1f%%', colors = colors) # double percentage sign is required to show % sign\n",
+    "# using auto percentage function; setting same colours as above countplot for island category\n",
+    "plt.legend(title = \"Islands\") # setting legend\n",
+    "plt.title('Island Distribution') # setting title\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sex is a categorical variable\n",
+    "colors = ['blue', 'pink']\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.countplot(x='sex', data= Penguins, palette = colors)\n",
+    "plt.title('Count of Penguins by Sex')\n",
+    "plt.xlabel('Sex')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n",
+    "\n",
+    "prob_gender = Penguins['sex'].value_counts(normalize=True) # getting the probability of the penguin gender\n",
+    "\n",
+    "\n",
+    "Genders = ['Male', 'Female']\n",
+    "gender_probabilities = [0.505, 0.495] # probabilities for gender as set out by above prob_gender value counts function\n",
+    "\n",
+    "fig = plt.figure(figsize =(10, 7)) #setting the size of the figure\n",
+    "plt.pie(gender_probabilities, labels = Genders, autopct='%1.1f%%', colors = colors) # double percentage sign is required to show % sign\n",
+    "# using auto percentage function; setting same colours as above countplot for island category\n",
+    "plt.legend(title = \"Genders\") # setting legend\n",
+    "plt.title('Gender Distribution') # setting title\n",
+    "plt.show()"
    ]
   },
   {
