--- a/task3.ipynb
+++ b/task3.ipynb
@@ -13,25 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Distribution of Data is a list of all the possible entries, and how often each entry occurs."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The appropriate distribution type can be separated based on whether they are categorical variables vs numerical variables.\n",
-    "Firstly, I will look at the categorical variables.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The qualitative variables Species, Island and Sex are discrete, distinct variables. As such, the appropriate numpy probability distribution would be a customised categorical distribution i.e numpy.random.choice. \n",
-    "In order to the demonstrate the probability distribution of categorical variables, it is necessary to specify the probability of each category. This can be obtained using the value counts function as I have demonstrated below for the Species variable.\n",
-    "Such categorical variables are best visualised using bar charts or pie charts."
+    "#Distribution of Data is a list of all the possible entries, and how often each entry occurs."
    ]
   },
   {
@@ -52,81 +34,6 @@
     "\n",
     "# I have downloaded the csv data file to the directory. It can also be gotten online at https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The above pandas describe() function provides a lot of useful information about the data set including:\n",
-    "Count which is all the non-null entries (which in actuality can be considered the frequency for the purpose of this task)\n",
-    "Unique shows the number of unique entries in a column\n",
-    "Top is the most common variable category\n",
-    "Frequency shows the frequency of the most common variable category \n",
-    "Mean shows the average\n",
-    "Standard Deviation\n",
-    "Minimum Values of each variable\n",
-    "Maximum Values of each variable\n",
-    "The 50th percentile (i.e the Median)\n",
-    "25th Percentile\n",
-    "75th Percentile "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Species is a categorical variable \n",
-    "plt.figure(figsize=(10, 7)) # setting the size of the figure\n",
-    "sns.countplot(x= 'species', data = Penguins) \n",
-    "plt.title('Frequency of Penguins Species')\n",
-    "plt.xlabel('Species')\n",
-    "plt.ylabel('Count')\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "prob_species = Penguins['species'].value_counts(normalize=True) # getting the probability of each \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# ISLAND (WHICH IS CATEGORICAL)\n",
-    "plt.figure(figsize=(10, 7))\n",
-    "sns.countplot(x='island', data = Penguins)\n",
-    "plt.title('Count of Penguins on Each Island')\n",
-    "plt.xlabel('Island')\n",
-    "plt.ylabel('Count')\n",
-    "plt.show()\n",
-    "\n",
-    "# SEX (WHICH IS CATEGORICAL)\n",
-    "plt.figure(figsize=(10, 7))\n",
-    "sns.countplot(x='sex', data= Penguins)\n",
-    "plt.title('Count of Penguins by Sex')\n",
-    "plt.xlabel('Sex')\n",
-    "plt.ylabel('Count')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -163,9 +70,9 @@
     "for variable in numeric_variables:\n",
     "    plt.figure(figsize=(10, 9))\n",
     "    sns.histplot(Penguins[variable], kde=True)\n",
-    "    plt.title(f'Distribution of {variable}')\n",
     "    plt.xlabel(variable)\n",
     "    plt.ylabel('Frequency')\n",
+    "    plt.title(f'Distribution of {variable}')\n",
     "    plt.show()\n"
    ]
   },
