--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -279,19 +279,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explain each of the different probability distributions in Python\n",
-    "\n",
-    "# Histograms etc of each of the variables\n",
-    "\n",
-    "# Check the distribution\n",
-    "\n",
-    "# Say which one is most appropriate and explain why\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The appropriate distribution type can be separated based on whether they are categorical variables vs numerical variables.\n",
     "Firstly, I will look at the categorical variables."
    ]
@@ -432,11 +419,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now, I will examine which are the most appropriate probability distributions to model the quantitative variables, flipper length, bill length, bill depth and body mass of the penguins.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -546,6 +533,140 @@
    "source": [
     "The above plot shows how entropy changes with the probability. For example, the higher the entropy, the higher the level of uncertainty. The closer the proability gets to certainty, e.g when the probability equals 1, the lower the entropy.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The end of Task 4\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Create an appropriate individual plot for each of the variables in the penguin data set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Penguins = pd.read_csv('penguins.csv') # reading the penguins data set to use (should already be done)\n",
+    "Penguins.describe(include = 'all') # I specified to include all as the describe function defaults to only show numerical data while \n",
+    "# I wanted to include both numerical & categorical data.\n",
+    "\n",
+    "\n",
+    "Penguins.isnull().sum() # checking for any empty values???\n",
+    "\n",
+    "# There are missing values in bill length, flipper length, bill depth, sex and body mass. \n",
+    "\n",
+    "penguins_complete = Penguins.copy().fillna(Penguins.mode(0).iloc[-1]) # I have used the mode() funciton to replace the missing values with the most frequent values.\n",
+    "# setting the data set as a new variable called penguins_complete\n",
+    "penguins_complete.isnull().sum() # checking empty values has been updated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Firstly, I have created individual plots for the qualitative data, sex (gender), species and island."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = ['blue', 'pink'] # setting the colour palette for the count plot\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.countplot(x='sex', data= penguins_complete, palette = colors)\n",
+    "plt.title('Count of Penguins by Sex')\n",
+    "plt.xlabel('Sex')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (10, 7))\n",
+    "sns.countplot (x = 'species', data = penguins_complete)\n",
+    "plt.title ('Frequency of Penguin Species')\n",
+    "plt.xlabel ('Species')\n",
+    "plt.ylabel ('Count')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Islands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = ['red', 'yellow', 'indigo'] # defining a list of colors\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.countplot(x='island', data = Penguins, palette = colors) # using palette function to set colors of count plot\n",
+    "plt.title('Count of Penguins on Each Island')\n",
+    "plt.xlabel('Island')\n",
+    "plt.ylabel('Count')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
