--- a/task3.ipynb
+++ b/task3.ipynb
@@ -32,15 +32,10 @@
     "Penguins.describe(include = 'all') # I specified to include all as the describe function defaults to only show numerical data while \n",
     "# I wanted to include both numerical & categorical data.\n",
     "\n",
+    "Penguins.info()\n",
+    "\n",
     "# I have downloaded the csv data file to the directory. It can also be gotten online at https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -55,6 +50,20 @@
     "plt.show() \n",
     "#plt.savefig('Histograms')\n",
     "#plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "body mass = chi squared "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, issues arise = separate out by species "
    ]
   },
   {
@@ -81,7 +90,91 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from fitter import Fitter\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "df = Penguins.dropna(subset=['bill_length_mm'])\n",
+    "\n",
+    "# Fit the distributions\n",
+    "f = Fitter(df['bill_length_mm']) #distributions=['normal', 'gamma', 'cauchy', 'chi2', 'expon', 'lognorm', 'norm', 'powerlaw', 'rayleigh', 'uniform'])\n",
+    "f.fit()\n",
+    "# Get a summary of the fits\n",
+    "f.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fitter import Fitter\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "df = Penguins.dropna(subset=['bill_depth_mm'])\n",
+    "\n",
+    "# Fit the distributions\n",
+    "f = Fitter(df['bill_depth_mm']) #distributions=['normal', 'gamma', 'cauchy', 'chi2', 'expon', 'lognorm', 'norm', 'powerlaw', 'rayleigh', 'uniform'])\n",
+    "f.fit()\n",
+    "# Get a summary of the fits\n",
+    "f.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fitter import Fitter\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "df = Penguins.dropna(subset=['flipper_length_mm'])\n",
+    "\n",
+    "# Fit the distributions\n",
+    "f = Fitter(df['flipper_length_mm'],) #distributions=['normal', 'gamma', 'cauchy', 'chi2', 'expon', 'lognorm', 'norm', 'powerlaw', 'rayleigh', 'uniform'])\n",
+    "f.fit()\n",
+    "# Get a summary of the fits\n",
+    "f.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fitter import Fitter\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "df = Penguins.dropna(subset=['body_mass_g'])\n",
+    "\n",
+    "# Fit the distributions\n",
+    "f = Fitter(df['body_mass_g']) #distributions=['normal', 'gamma', 'poisson', 'chi2', 'expon', 'lognorm', 'norm', 'powerlaw', 'rayleigh', 'uniform'])\n",
+    "f.fit()\n",
+    "# Get a summary of the fits\n",
+    "f.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "import scipy.stats as stats\n",
+    "# there is a faulty value for in row 336 for the sex variable.\n",
+    "# there is a \".\" which needs to be removed\n",
+    "penguins.drop(penguins[penguins['sex']=='.'].index, inplace=True)\n",
+    "sex = penguins[\"sex\"];\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
